--- a/MemeThing/Views/EndOfRound.storyboard
+++ b/MemeThing/Views/EndOfRound.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UaH-bf-bqP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UaH-bf-bqP">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -35,7 +35,7 @@
                                 <rect key="frame" x="20.5" y="164" width="373" height="487"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PKS-h6-6LA">
-                                        <rect key="frame" x="0.0" y="0.0" width="373" height="447"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="373" height="437"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5yZ-7t-7eS" customClass="MemeThingCaption" customModule="MemeThing" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="447" width="373" height="40"/>
@@ -50,7 +50,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="PKS-h6-6LA" firstAttribute="width" secondItem="ezc-7D-MKU" secondAttribute="width" id="51E-W0-csd"/>
-                                    <constraint firstItem="5yZ-7t-7eS" firstAttribute="top" secondItem="PKS-h6-6LA" secondAttribute="bottom" id="9Ds-gq-hY0"/>
+                                    <constraint firstItem="5yZ-7t-7eS" firstAttribute="top" secondItem="PKS-h6-6LA" secondAttribute="bottom" constant="10" id="9Ds-gq-hY0"/>
                                     <constraint firstAttribute="bottom" secondItem="5yZ-7t-7eS" secondAttribute="bottom" id="EcS-iV-Voz"/>
                                     <constraint firstItem="5yZ-7t-7eS" firstAttribute="width" secondItem="PKS-h6-6LA" secondAttribute="width" id="HXk-Ds-n0H"/>
                                     <constraint firstItem="PKS-h6-6LA" firstAttribute="centerX" secondItem="ezc-7D-MKU" secondAttribute="centerX" id="r24-7k-ww5"/>
@@ -58,7 +58,7 @@
                                     <constraint firstItem="PKS-h6-6LA" firstAttribute="top" secondItem="ezc-7D-MKU" secondAttribute="top" id="src-Mh-dCs"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KHi-YD-VRK" customClass="MemeThingLabelBackgroundLight" customModule="MemeThing" customModuleProvider="target">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KHi-YD-VRK" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
                                 <rect key="frame" x="20.5" y="659" width="373" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="Wug-Al-qYR"/>
