--- a/MemeThing/Views/MainMenu.storyboard
+++ b/MemeThing/Views/MainMenu.storyboard
@@ -17,11 +17,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="gvR-q1-r0k">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="gvR-q1-r0k">
                                 <rect key="frame" x="41.5" y="185" width="331" height="404"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vUO-Of-2dw" customClass="MemeThingButton" customModule="MemeThing" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="331" height="95"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="331" height="92"/>
                                         <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="18"/>
                                         <state key="normal" title="New Game"/>
                                         <connections>
@@ -29,7 +29,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QmY-Sk-EIK" customClass="MemeThingButton" customModule="MemeThing" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="103" width="331" height="95"/>
+                                        <rect key="frame" x="0.0" y="104" width="331" height="92"/>
                                         <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="17"/>
                                         <state key="normal" title="Resume Game"/>
                                         <connections>
@@ -37,21 +37,21 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U25-wd-vr0" customClass="MemeThingButton" customModule="MemeThing" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="206" width="331" height="95"/>
+                                        <rect key="frame" x="0.0" y="208" width="331" height="92"/>
                                         <state key="normal" title="Friends"/>
                                         <connections>
                                             <segue destination="XBR-bp-Z4K" kind="show" id="dWT-F9-5Ic"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9HV-p3-eCF" customClass="MemeThingButton" customModule="MemeThing" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="309" width="331" height="95"/>
+                                        <rect key="frame" x="0.0" y="312" width="331" height="92"/>
                                         <state key="normal" title="Profile"/>
                                         <connections>
                                             <segue destination="xsl-Ho-zco" kind="show" id="EgK-vo-3Ys"/>
                                         </connections>
                                     </button>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9ey-6h-7nf">
-                                        <rect key="frame" x="0.0" y="408" width="331" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="404" width="331" height="0.0"/>
                                         <state key="normal" title="Fake notifications"/>
                                         <connections>
                                             <action selector="tempFakeNotifications:" destination="TSk-Yz-NDn" eventType="touchUpInside" id="BIM-eF-eLS"/>
@@ -62,7 +62,7 @@
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="500" id="sZr-PI-J7w"/>
                                 </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome, [screen name]!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dPK-ol-adM" customClass="MemeThingLabelBackground" customModule="MemeThing" customModuleProvider="target">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome, [screen name]!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dPK-ol-adM" customClass="MemeThingWelcome" customModule="MemeThing" customModuleProvider="target">
                                 <rect key="frame" x="109.5" y="86.5" width="195.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -78,6 +78,7 @@
                             <constraint firstItem="gvR-q1-r0k" firstAttribute="height" secondItem="fis-jG-xff" secondAttribute="height" multiplier="0.5" id="Mkt-zT-nAz"/>
                             <constraint firstItem="gvR-q1-r0k" firstAttribute="centerY" secondItem="AcR-df-SPv" secondAttribute="centerY" id="QwA-4S-w1U"/>
                             <constraint firstItem="gvR-q1-r0k" firstAttribute="top" relation="greaterThanOrEqual" secondItem="dPK-ol-adM" secondAttribute="bottom" constant="20" id="b9I-fO-4DD"/>
+                            <constraint firstItem="dPK-ol-adM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vUO-Of-2dw" secondAttribute="leading" id="ekK-Aq-YI7"/>
                             <constraint firstItem="dPK-ol-adM" firstAttribute="centerX" secondItem="AcR-df-SPv" secondAttribute="centerX" id="xBA-4Z-AzW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="AcR-df-SPv"/>
