--- a/MemeThing/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/MemeThing/Resources/Base.lproj/LaunchScreen.storyboard
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,12 +15,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="AlP-5g-3vX">
-                                <rect key="frame" x="87" y="384" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="j60-YM-sAY">
+                                <rect key="frame" x="0.0" y="291.5" width="414" height="414"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="j60-YM-sAY" secondAttribute="height" multiplier="1:1" id="nMd-l2-EwP"/>
+                                </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meme Thing" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vv7-FG-sso">
+                                <rect key="frame" x="20.5" y="64" width="373" height="208"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="80"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" name="background"/>
+                        <color key="backgroundColor" red="0.10171521460000001" green="0.30216014390000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="vv7-FG-sso" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Kce-uz-fZM"/>
+                            <constraint firstItem="j60-YM-sAY" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="Lg6-f2-fvX"/>
+                            <constraint firstItem="vv7-FG-sso" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="LmI-Hu-mWI"/>
+                            <constraint firstItem="vv7-FG-sso" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.9" id="Su5-KV-1eW"/>
+                            <constraint firstItem="j60-YM-sAY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="WEK-9a-Elo"/>
+                            <constraint firstItem="j60-YM-sAY" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" multiplier="1.1" id="kzM-Uy-38x"/>
+                            <constraint firstItem="j60-YM-sAY" firstAttribute="top" relation="greaterThanOrEqual" secondItem="vv7-FG-sso" secondAttribute="bottom" constant="12" id="t7s-jY-lzc"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -31,8 +47,6 @@
         </scene>
     </scenes>
     <resources>
-        <namedColor name="background">
-            <color red="0.0" green="0.11372549019607843" blue="0.47843137254901963" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
+        <image name="Logo" width="200" height="200"/>
     </resources>
 </document>
