--- a/MemeThing/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/MemeThing/Resources/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="j60-YM-sAY">
-                                <rect key="frame" x="0.0" y="291.5" width="414" height="414"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="j60-YM-sAY">
+                                <rect key="frame" x="0.0" y="294.5" width="414" height="409.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="j60-YM-sAY" secondAttribute="height" multiplier="1:1" id="nMd-l2-EwP"/>
                                 </constraints>
@@ -33,10 +33,9 @@
                             <constraint firstItem="vv7-FG-sso" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Kce-uz-fZM"/>
                             <constraint firstItem="j60-YM-sAY" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="Lg6-f2-fvX"/>
                             <constraint firstItem="vv7-FG-sso" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="LmI-Hu-mWI"/>
+                            <constraint firstItem="j60-YM-sAY" firstAttribute="top" secondItem="vv7-FG-sso" secondAttribute="bottom" constant="20" id="R6P-Xv-eaA"/>
                             <constraint firstItem="vv7-FG-sso" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.9" id="Su5-KV-1eW"/>
                             <constraint firstItem="j60-YM-sAY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="WEK-9a-Elo"/>
-                            <constraint firstItem="j60-YM-sAY" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" multiplier="1.1" id="kzM-Uy-38x"/>
-                            <constraint firstItem="j60-YM-sAY" firstAttribute="top" relation="greaterThanOrEqual" secondItem="vv7-FG-sso" secondAttribute="bottom" constant="12" id="t7s-jY-lzc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -47,6 +46,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Logo" width="200" height="200"/>
+        <image name="pencil" catalog="system" width="128" height="113"/>
     </resources>
 </document>
